# hierarchicalData

./: README.md  db.sqlite3  manage.py  pyproject.toml
hierarachical/: asgi.py  settings.py  urls.py  wsgi.py
mpttapp/: admin.py  models.py  views.py
mpttapp/migrations/: 0001_initial.py
templates/: index.html
